[gd_scene load_steps=8 format=1]

[ext_resource path="res://Data/Hud_scripts/Shop.gd" type="Script" id=1]
[ext_resource path="res://Data/Hud_scripts/Inventory/tablet.png" type="Texture" id=2]
[ext_resource path="res://Data/Deployables/deployable box center.png" type="Texture" id=3]
[ext_resource path="res://Data/Hud_scripts/theme.tres" type="Theme" id=4]
[ext_resource path="res://Data/Hud_scripts/Inventory/bg_container.png" type="Texture" id=5]
[ext_resource path="res://Data/Hud_scripts/Inventory/1 pixel.png" type="Texture" id=6]

[sub_resource type="StyleBoxTexture" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 5 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[node name="CanvasLayer" type="CanvasLayer"]

layer = 100
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Trade" type="Control" parent="."]

visibility/opacity = 0.75
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="sell_button" type="Button" parent="Trade"]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -263.0
margin/top = -16.0
margin/right = -180.0
margin/bottom = 4.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Sell"
flat = false

[node name="buy_button" type="Button" parent="Trade"]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 34.0
margin/top = -15.0
margin/right = 117.0
margin/bottom = 5.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Buy"
flat = false

[node name="buy_inv" type="Sprite" parent="Trade"]

texture = ExtResource( 2 )
centered = false

[node name="sell_inv" type="Sprite" parent="Trade"]

transform/pos = Vector2( -300, 0 )
texture = ExtResource( 2 )
centered = false

[node name="buy_title" type="Label" parent="Trade"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 16.0
margin/right = 140.0
margin/bottom = 31.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="sell_title" type="Label" parent="Trade"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -290.0
margin/top = 16.0
margin/right = -160.0
margin/bottom = 31.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="selector" type="Sprite" parent="Trade"]

visibility/visible = false
transform/pos = Vector2( -244, -118 )
transform/scale = Vector2( 10, 1.5 )
texture = ExtResource( 3 )
centered = false

[node name="display_pos" type="Position2D" parent="Trade"]

transform/pos = Vector2( -150, 0 )

[node name="display_pos1" type="Position2D" parent="Trade"]

transform/pos = Vector2( 150, 0 )

[node name="buy_list" type="ItemList" parent="Trade"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 4 )
margin/left = 10.0
margin/top = 32.0
margin/right = 140.0
margin/bottom = 232.0
custom_styles/bg = SubResource( 1 )

[node name="sell_list" type="ItemList" parent="Trade"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 4 )
margin/left = -290.0
margin/top = 32.0
margin/right = -160.0
margin/bottom = 232.0
custom_styles/bg = SubResource( 1 )

[node name="greyed" type="Sprite" parent="Trade"]

visibility/opacity = 0.3
transform/pos = Vector2( -301, 0 )
transform/scale = Vector2( 300, 250 )
texture = ExtResource( 6 )
centered = false
modulate = Color( 0, 0, 0, 1 )


